# QuickRender

./: AssetMan.h  CMakeLists.txt  CMakeUserPresets.json  Camera.cpp  Helpers.cpp  Interface.cpp  Interface.h  MaterialInterface.cpp  Memory.cpp  Memory.h  Mesh.cpp  Mesh.h  PipelineInterface.cpp  Query.cpp  README.md  ShaderResources.cpp  ShaderResources.h  UI.cpp  UI.h  Wrappers.cpp  Wrappers.h  conanfile.txt  main.cpp
.cache/clangd/index/: Helpers.cpp.8056274BE9726400.idx  Interface.cpp.3476561FE5D4FF39.idx  Interface.h.DC21C6D83F217DBE.idx  MaterialInterface.cpp.599CF9FA4314CBA3.idx  Memory.cpp.FBBF9DED518B865E.idx  Memory.h.834B066BC59D4516.idx  Mesh.cpp.6CA897138CD8AC6F.idx  Mesh.h.DDDD74DCFF3E2C91.idx  PipelineInterface.cpp.445BE330D334CB24.idx  Wrappers.cpp.4E6A506CE77616BB.idx  Wrappers.h.A88DE6A8C5F4701F.idx  main.cpp.C568B36BDAF134D5.idx
Fonts/: CMakeLists.txt
Meshes/: CMakeLists.txt  Pawn.dae  SkySphere.dae
Shaders/: CMakeLists.txt  Frag.glsl  Vert.glsl
include/: Interface.h  Lighting.h  Memory.h  Mesh.h  Wrappers.h
src/: AssetMan.cpp  Camera.cpp  Helpers.cpp  Interface.cpp  MaterialInterface.cpp  Memory.cpp  Mesh.cpp  PipelineInterface.cpp  Wrappers.cpp  main.cpp
